Fixed overlapping navbar on sidebar

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -137,7 +137,11 @@
     width: 70%;
     box-shadow: 1px 1px 5px #8a8a8a;
   }
-
+  @media screen and (max-width: 768px){
+    div.sidebar-list{
+      padding-top: 50px;
+    }
+  }
   .sidebar a {
     font-size: 1.3rem;
   }
